2007-07-21  Brian Bidulock  <bidulock@openss7.org>

	* pkgrelease: bumped for release candidate
	* debian/changelog: bumped for release candidate

	* netperf_sctp_range: add ability to set bind
	* netperf_sctp_stream: add ability to set bind
	* netperf_tcp_range: add ability to set bind
	* netperf_tcp_stream: add ability to set bind
	* netperf_udp_range: add ability to set bind
	* netperf_udp_stream: add ability to set bind
	* nettest_xti.c: add ability to set bind
	* nettest_xti.h: add ability to set bind
	* man1/netperf.man: document ability to set bind
	* man1/netperf_sctp_range.man: document ability to set bind
	* man1/netperf_sctp_rr.man: document ability to set bind
	* man1/netperf_sctp_stream.man: document ability to set bind
	* man1/netperf_tcp_range.man: document ability to set bind
	* man1/netperf_tcp_rr.man: document ability to set bind
	* man1/netperf_tcp_stream.man: document ability to set bind
	* man1/netperf_udp_range.man: document ability to set bind
	* man1/netperf_udp_rr.man: document ability to set bind
	* man1/netperf_udp_stream.man: document ability to set bind

2007-07-18  Brian Bidulock  <bidulock@openss7.org>

	* nettest_xti.c:
	  - getopts termination fixed
	  - support --ipaddr and --portnum options
	* nettest_xti.h: add ipaddress and port to requests
	* netserver.c: getopts termination fixed
	* netsh.c: getopts termination fixed
	* nettest_bsd.c: getopts termination fixed
	* nettest_dlpi.c: getopts termination fixed
	* nettest_dns.c: getopts termination fixed
	* nettest_ipv6.c: getopts termination fixed
	* nettest_unix.c: getopts termination fixed

2007-06-25  Brian Bidulock  <bidulock@openss7.org>

	* .pkgrelease: bumped release numbers
	* debian/changelog: bumped release numbers
	* manual/news.texi: bumped release numbers

2007-06-23  Brian Bidulock  <bidulock@openss7.org>

	* manual/news.texi: updates for release

2007-06-20  Brian Bidulock  <bidulock@openss7.org>

	* manual/news.texi: new distro/kernel support